fix: border-box used and grid, removed whitespace crop on long names

--- a/draft-packages/avatar/KaizenDraft/Avatar/styles.module.scss
+++ b/draft-packages/avatar/KaizenDraft/Avatar/styles.module.scss
@@ -1,10 +1,12 @@
 @import "~@kaizen/design-tokens/sass/color";
 @import "~@kaizen/design-tokens/sass/shadow";
 @import "~@kaizen/design-tokens/sass/typography";
+@import "~@kaizen/component-library/styles/grid";
 
 .wrapper {
   background: $kz-color-stone;
   border-radius: 100%;
+  box-sizing: border-box;
   overflow: hidden;
   align-items: center;
   display: flex;
@@ -27,18 +29,18 @@
   // Sizes
 
   &.small {
-    width: 1.25rem;
-    height: 1.25rem;
+    width: $ca-grid;
+    height: $ca-grid;
   }
 
   &.medium {
-    width: 3rem;
-    height: 3rem;
+    width: $ca-grid * 2;
+    height: $ca-grid * 2;
   }
 
   &.large {
-    width: 3.75rem;
-    height: 3.75rem;
+    width: $ca-grid * 2.5;
+    height: $ca-grid * 2.5;
   }
 }
 
@@ -76,7 +78,8 @@
   letter-spacing: $kz-typography-heading-3-letter-spacing;
 
   // Whitespace cropping
-  &::before {
+
+  &:not(.longName)::before {
     content: "";
     display: block;
     margin-top: -0.001em;
